# diary

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/core/: config.py
app/repo/: config.py
app/routes/: chat.py
app/services/: google.py  openai.py
src/backend/db/: postgres.py
src/backend/services/: google.py  openai.py
src/backend/web/rest/: main.py
src/backend/web/rest/routes/: __init__.py  chat.py
tests/: test_main.py
