[tool.poetry]
name = "diary"
version = "0.1.0"
description = ""
authors = ["Bryan Baek <seungkwan.baek@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]  # Add this line

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
openai = "^1.51.2"
groq = "^0.11.0"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"
mypy = "^1.11.2"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
just = "^0.8.162"
pylint = "^3.3.1"
typing-extensions = "^4.12.2"
datetime = "^5.5"
pydantic = "^2.9.2"
httpx = "^0.27.2"
python-socketio = "^5.11.4"
socketio = "^0.2.1"
pymongo = "^4.10.1"
asyncio = "^3.4.3"
motor = "^3.3.2"  # Add this line
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
